# socket-server-mocker

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: errors.rs  instructions.rs  lib.rs  server_mocker.rs  server_mocker_instruction.rs  tcp_server.rs  tcp_server_mocker.rs  udp_server.rs
src/server_mocker/: mod.rs  server_mocker_error.rs  tcp_server_mocker.rs  udp_server_mocker.rs
tests/: dns_mock.rs  http_reqwest_api_mock.rs  postgres_mock.rs  simple_receiving_message.rs  simple_receiving_tcp_message.rs  simple_sending_message.rs  simple_sending_tcp_message.rs  simple_tcp.rs  simple_udp.rs  smtp_mock.rs
