[package]
name = "socket-server-mocker"
description = "Mock socket server in Rust, for testing various network clients."
authors = ["Thomas Prévost"]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thomasarmel/socket-server-mocker"
# List of categories can be found at https://crates.io/category_slugs
categories = ["network-programming", "development-tools::testing"]

[dependencies]
thiserror = "1.0.64"

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
postgres = "0.19.9"
trust-dns-client = "0.23.2"
lettre = "0.11.9"
